--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -48,13 +48,14 @@
 }
 .linkb {
       display: flex; /* Set display to flex to enable flex layout */
-      align-items: center; /* Align items vertically */
-      gap: 10px; /* Add spacing between image and statement */
+      align-items: flex-start; /* Align items vertically */
+      gap: 20px; /* Add spacing between image and statement */
     }
     
     .linkb img {
-      width: 65px; /* Adjust the width as needed */
+      width: 40px; /* Adjust the width as needed */
       height: auto; /* Automatically adjust height to maintain aspect ratio */
+      border-radius: 8px;
     }
     
     .linkb a {
@@ -63,6 +64,7 @@
       font-size: 30px; /* Adjust the font size as needed */
       font-weight: 400;
       letter-spacing: 1.5px;
+      
     }
        
 @media screen and (max-width: 830px) {
@@ -77,7 +79,7 @@
 
       }
       .links{
-            align-items:center;
+            align-items:flex-start;
 
       }
 
