--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,78 +1,103 @@
+/* Importing variables */
 @import "../../vars.css";
 
-.container{
-      position: relative;
-      background-color: rgba(12, 12, 12, 0.6);
-      border-radius: 15px;
-      padding: 73px;
-      margin-top: 129px;
-      z-index: 1;
-      margin-left: 10%;
-      margin-right: 10%;
-
-
-}
-.title{
-      color: var(--color-text);
-      font-size: 35px;
-      font-weight: 700;
-      letter-spacing: 1.75px;
-      text-transform: uppercase;
-
-}
-.content{
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-
-}
-.aboutItems{
-      color: var(--color-text);
-      display: flex;
-      flex-direction: column;
-      gap: 50px;
-}
-.aboutItem{
-display: flex;
-flex-direction: row;
-align-items: center;
-border-radius: 20px;
-list-style: none;
-padding: 25px;
-background-image: linear-gradient(90deg,rgba(165,215,232,0.42)0%,rgba(255,255,255,0)100%);
-background-size: 0 100%;
-background-repeat: no-repeat;
-transition: 0.4s;
-}
-.aboutItem:hover{
-      background-size: 100% 100%;
-}
-.aboutItem h3{
-      font-size: 25px;
-      font-weight: 600;
-}
-.aboutItem p{
-      font-size: 22px;
+.container {
+  position: relative;
+  background-color: rgba(12, 12, 12, 0.6);
+  border-radius: 15px;
+  padding: 73px;
+  margin-top: 129px;
+  z-index: 1;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
-@media screen  and (max-width: 830px){
-      .container{
-            background-color: transparent;
-            padding-left: 0;
-            padding-right: 0;
-
-      }
-      .content{
-            flex-direction: column;
-      }
-      
-      .aboutItems{
-            margin-top: 29px;
-      }
-      .aboutItem{
-            padding-left: 0;
-            padding-right: 0;
-            
-      }
+.title {
+  color: var(--color-text);
+  font-size: 35px;
+  font-weight: 700;
+  letter-spacing: 1.75px;
+  text-transform: uppercase;
 }
-      
+
+.content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.aboutItems {
+  color: var(--color-text);
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.aboutItem {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 20px;
+  list-style: none;
+  padding: 25px;
+  background-image: linear-gradient(90deg, rgba(165, 215, 232, 0.42) 0%, rgba(255, 255, 255, 0) 100%);
+  background-size: 0 100%;
+  background-repeat: no-repeat;
+  transition: 0.4s;
+}
+
+.aboutItem:hover {
+  background-size: 100% 100%;
+}
+
+.aboutItem h3 {
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.aboutItem p {
+  font-size: 22px;
+}
+
+@media screen and (max-width: 830px) {
+  .container {
+    background-color: transparent;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .content {
+    flex-direction: column;
+  }
+  .aboutItems {
+    margin-top: 29px;
+  }
+  .aboutItem {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+/* Additional Media Queries for Smaller Devices */
+@media screen and (max-width: 480px) {
+  .container {
+    padding: 20px; /* Adjust padding for smaller devices */
+    margin-top: 30px; /* Adjust margin-top for smaller devices */
+  }
+  .title {
+    font-size: 28px; /* Decrease font size for smaller devices */
+    text-align: center; /* Center-align title for smaller devices */
+    margin-bottom: 30px; /* Add margin-bottom for spacing */
+  }
+  .aboutItems {
+    gap: 20px; /* Decrease gap between items for smaller devices */
+  }
+  .aboutItem {
+    padding: 15px; /* Adjust padding for smaller devices */
+  }
+  .aboutItem h3 {
+    font-size: 20px; /* Decrease font size for smaller devices */
+  }
+  .aboutItem p {
+    font-size: 18px; /* Decrease font size for smaller devices */
+  }
+}
