--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,19 +1,19 @@
-@import "../../vars.css";
-
-.container{
+/* project.module.css */
+.container {
       margin-top: 76px;
       color: var(--color-text);
       margin-left: 10%;
       margin-right: 10%;
-}
-.title{
+    }
+    
+    .title {
       font-size: 35px;
       font-weight: 700;
       letter-spacing: 1.75px;
       text-transform: uppercase;
-
-}
-.projects{
+    }
+    
+    .projects {
       margin-top: 37px;
       display: flex;
       flex-direction: row;
@@ -22,4 +22,22 @@
       justify-content: center;
       gap: 15px;
       width: 100%;
-}
+    }
+    
+    /* Media Query for Smaller Devices */
+    @media screen and (max-width: 480px) {
+      .container {
+        margin-left: 5%; /* Adjust margin-left for smaller devices */
+        margin-right: 5%; /* Adjust margin-right for smaller devices */
+      }
+    
+      .title {
+        font-size: 28px; /* Decrease font size for smaller devices */
+      }
+    
+      .projects {
+        margin-top: 20px; /* Adjust margin-top for smaller devices */
+        gap: 10px; /* Decrease gap between projects for smaller devices */
+      }
+    }
+    
