--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -206,7 +206,7 @@
 
 @media screen and (max-width: 830px) {
   .content {
-    flex-direction: column;
+      flex-direction: column;
     align-items: center;
     gap: 34px;
   }
@@ -230,11 +230,11 @@
 /* Additional Media Queries for Smaller Devices */
 @media screen and (max-width: 480px) {
   .container {
-    margin-top: 50px; /* Adjust margin-top for smaller devices */
+    margin-top: 20px; /* Adjust margin-top for smaller devices */
   }
   .title {
-    font-size: 28px; /* Decrease font size for smaller devices */
-    text-align: center; /* Center-align title for smaller devices */
+    font-size: 30px; /* Decrease font size for smaller devices */
+    text-align: left; /* Center-align title for smaller devices */
     margin-bottom: 20px; /* Add margin-bottom for spacing */
   }
   .skills,
@@ -247,7 +247,7 @@
   }
   .skill p,
   .historyItemDetails p {
-    font-size: 18px; /* Decrease font size for smaller devices */
+    font-size: 20px; /* Decrease font size for smaller devices */
   }
 }
 
