--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -6,7 +6,7 @@
   background-color: rgba(12, 12, 12, 0.6);
   border-radius: 15px;
   padding: 73px;
-  margin-top: 129px;
+  margin-top: 100px;
   z-index: 1;
   margin-left: 10%;
   margin-right: 10%;
@@ -61,6 +61,7 @@
 
 @media screen and (max-width: 830px) {
   .container {
+      margin-top: 20px;
     background-color: transparent;
     padding-left: 0;
     padding-right: 0;
@@ -69,23 +70,24 @@
     flex-direction: column;
   }
   .aboutItems {
-    margin-top: 29px;
+    margin-top: 20px;
   }
   .aboutItem {
     padding-left: 0;
     padding-right: 0;
+    
   }
 }
 
 /* Additional Media Queries for Smaller Devices */
 @media screen and (max-width: 480px) {
   .container {
-    padding: 20px; /* Adjust padding for smaller devices */
-    margin-top: 30px; /* Adjust margin-top for smaller devices */
+    padding: 10px; /* Adjust padding for smaller devices */
+    margin-top: 20px; /* Adjust margin-top for smaller devices */
   }
   .title {
-    font-size: 28px; /* Decrease font size for smaller devices */
-    text-align: center; /* Center-align title for smaller devices */
+    font-size: 30px; /* Decrease font size for smaller devices */
+    text-align: left; /* Center-align title for smaller devices */
     margin-bottom: 30px; /* Add margin-bottom for spacing */
   }
   .aboutItems {
@@ -95,9 +97,9 @@
     padding: 15px; /* Adjust padding for smaller devices */
   }
   .aboutItem h3 {
-    font-size: 20px; /* Decrease font size for smaller devices */
+    font-size: 24px; /* Decrease font size for smaller devices */
   }
   .aboutItem p {
-    font-size: 18px; /* Decrease font size for smaller devices */
+    font-size: 20px; /* Decrease font size for smaller devices */
   }
 }
