--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -52,7 +52,7 @@
   width: 220px;
   z-index: 1;
   animation-name: floating;
-  animation-duration: 3s;
+  animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
   border-radius: 48%; /* Makes the image circular */
@@ -115,13 +115,14 @@
   .title {
     font-size: 48px;
     margin-bottom: 20px;
+    margin-top: 20px;
   }
   .description {
     font-size: 24px;
     margin-bottom: 30px;
   }
   .contactBtn {
-    font-size: 20px;
+    font-size: 24px;
     padding: 12px 20px;
   }
   .heroImg {
@@ -133,13 +134,14 @@
 @media screen and (max-width: 480px) {
   .title {
     font-size: 36px;
+    margin-top: 20px;
   }
   .description {
     font-size: 20px;
   }
   .contactBtn {
-    font-size: 18px;
-    padding: 10px 16px;
+    font-size: 24px; /* Increase font size */
+    padding: 12px 20px; /* Increase padding */
   }
   .heroImg {
     width: 100px;
