--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -117,7 +117,7 @@
     gap: 20px; /* Decrease gap between links for smaller devices */
   }
   .link a{
-      font-size: 1.2em; 
+      font-size: 1.5em; 
       max-width: 100%;
   }
 
@@ -131,6 +131,7 @@
   }
 
   .linkb a {
-    font-size: 24px; /* Decrease font size for smaller devices */
+      font-size: 1.5em; 
+      max-width: 100%; /* Decrease font size for smaller devices */
   }
 }
